# backend/api/api/users/login/login.go
@@ -2,23 +2,36 @@ package login
 
 import (
 	"context"
-	"database/sql"
 	"response"
+	"response/code"
 	"time"
 
 	"jwtGin"
-	"model/loginData"
-	"response/code"
+
+	"go.mongodb.org/mongo-driver/bson"
+	"go.mongodb.org/mongo-driver/mongo"
+
+	"model/accountData"
+	"model/user/tokenData"
+	"model/userData"
 )
 
 type Arguments struct {
-	db     *sql.DB
+	db     *mongo.Database
 	ctx    context.Context
 	token  string
 	jwtMgr *jwtGin.Manager
 }
 
-func NewArguments(db *sql.DB, ctx context.Context, token string, jwtMgr *jwtGin.Manager) *Arguments {
+type userInfo = *userData.Content
+type token = *tokenData.Content
+
+type Result struct {
+	token
+	userInfo
+}
+
+func NewArguments(db *mongo.Database, ctx context.Context, token string, jwtMgr *jwtGin.Manager) *Arguments {
 	return &Arguments{
 		db:     db,
 		ctx:    ctx,
@@ -27,44 +40,61 @@ func NewArguments(db *sql.DB, ctx context.Context, token string, jwtMgr *jwtGin.
 	}
 }
 
-func LogIn(args *Arguments, res *response.Body) {
-
-	prepare, err1 := args.db.PrepareContext(args.ctx, "SELECT UserID From Users WHERE Token = ?")
+func LogIn(args *Arguments, resp *response.Body) {
+	id, err1 := auth(args)
 	if err1 != nil {
-		res.Error(code.LOGIN_FAIURE, err1.Error())
+		resp.Error(code.AUTH_FAIURE, err1.Error())
 		return
 	}
-	defer prepare.Close()
 
-	var userID int64
-	err2 := prepare.QueryRowContext(args.ctx, args.token).Scan(&userID)
+	info, err2 := getUserInfo(args, id)
 	if err2 != nil {
-		res.Error(code.LOGIN_FAIURE, err2.Error())
+		resp.Error(code.AUTH_FAIURE, err2.Error())
 		return
 	}
 
-	err3 := updateLoginTime(args, userID)
+	data, err3 := getResult(args, id, info)
 	if err3 != nil {
-		res.Error(code.LOGIN_FAIURE, err3.Error())
+		resp.Error(code.AUTH_FAIURE, err3.Error())
 		return
 	}
 
-	data, err4 := loginData.NewContent(userID, args.jwtMgr)
-	if err4 != nil {
-		res.Error(code.LOGIN_FAIURE, err4.Error())
-		return
-	}
-
-	res.Data = data
+	resp.Data = data
 }
 
-func updateLoginTime(args *Arguments, userID int64) error {
-	prepare, err1 := args.db.PrepareContext(args.ctx, "Update Users SET UpdateTime = ? WHERE UserID = ?")
-	if err1 != nil {
-		return err1
-	}
-	defer prepare.Close()
+func auth(args *Arguments) (string, error) {
+	filter := bson.D{{Key: "Token", Value: args.token}}
 
-	_, err2 := prepare.ExecContext(args.ctx, time.Now().Unix(), userID)
-	return err2
+	update := bson.D{{Key: "$set", Value: bson.D{
+		{Key: "UpdateTime", Value: time.Now().Unix()},
+	}}}
+
+	collect := args.db.Collection("accounts")
+
+	var account accountData.ID
+
+	err1 := collect.FindOne(args.ctx, filter).Decode(&account)
+	if err1 != nil {
+		return "", err1
+	}
+
+	_, err2 := collect.UpdateOne(args.ctx, filter, update)
+	if err2 != nil {
+		return "", err2
+	}
+
+	return account.ID.Hex(), nil
+}
+
+func getUserInfo(args *Arguments, id string) (*userData.Content, error) {
+	return userData.GetCache(args.ctx, args.db, id)
+}
+
+func getResult(args *Arguments, id string, info *userData.Content) (*Result, error) {
+	data, err := tokenData.NewContent(id, args.jwtMgr)
+	if err != nil {
+		return nil, err
+	}
+
+	return &Result{token: data, userInfo: info}, nil
 }
